--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Check Code Format 🔧
         run: cargo fmt -- --check
       - name: Lint with Clippy 🔧
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --all-targets --all-features
+#        run: cargo clippy --all-targets --all-features -- -D warnings
   build:
     name: Build and Upload
     runs-on: ubuntu-latest
