--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-image = "0.25.6"
 console = "0.15.11"
 indicatif = "0.17.11"
 rand = "0.9.1"
+stb_image = "0.3.0"
+image = "0.25.6"
